# tiny-websocket

./: CMakeLists.txt  LICENSE  README.md
doc/: websocket请求格式.md
example/: index.css  socket.html  socket.js
example/rbclient/: main.rb
include/: base64.hpp  common_poll.hpp  conn_ctx.hpp  core.hpp  event.hpp  global.hpp  http_request.hpp  http_response.hpp  sha1.hpp  string_util.hpp  tcp_net_util.hpp  websocket_conn.hpp  websocket_connect.hpp  websocket_handler.hpp  websocket_message.hpp  websocket_message_frame.hpp  websocket_request.hpp  websocket_response.hpp
src/: CMakeLists.txt  main.cpp
src/core/: common_poll.cpp  conn_ctx.cpp  core.cpp  core_epoll.cpp  core_kqueue.cpp  core_select.cpp
src/example/: example.cpp
src/global/: base64.cpp  sha1.cpp  string_util.cpp  tcp_net_util.cpp
src/http/: http_request.cpp  http_response.cpp
src/tests/: CMakeLists.txt  string_util_test.cpp  websocket_test.cpp
src/ws/: websocket_connect.cpp  websocket_message.cpp  websocket_message_frame.cpp  websocket_request.cpp  websocket_response.cpp
